# face

./: .gitignore  CMakeLists.txt  CameraRESTServer.cpp  CameraRESTServer.h  CfgData.cpp  CfgData.h  ExtractFeatureThread.cpp  ExtractFeatureThread.h  Face_1_N.cpp  Face_1_N.h  HW_FACE_SDK_GPU_dynamic.h  Logger.cpp  Logger.h  PhotoExtractFeature.cpp  PhotoExtractFeature.h  RESTClient.cpp  RESTClient.h  Semaphore.h  ThreadSafeArray.h  configure.xml  face.sqlite  main.cpp
